# core-vm

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
src/: asminterpreter.cpp  assembler.cpp  bytecodeinterpreter.cpp  compiler.cpp  ir.cpp  lexer.cpp  loader.cpp  parse.cpp  parser.cpp  templategenerator.cpp  types.cpp  util.cpp
src/cpu/arm64/: arm64_regs.h  done.s  iadd.s  iconst.s  idiv.s  imul.s  isub.s  loadi.s  printi.s  storei.s  trampoline.S  trampoline.s
src/include/: assembler.h  builder.h  bytecodeasm.h  bytecodeinterpreter.h  compiler.h  ir.h  lexer.h  loader.h  opcode.h  parse.h  parser.h  templategenerator.h  types.h  util.h
test/: test_add.cvm  test_arm64.cpp  test_asm.cpp  test_cast.cvm  test_compiler.cpp  test_interpreter.cpp  test_lexer.cpp  test_lexer.cvm  test_parser.cpp  test_parser.cvm  test_parser_cast.cpp  test_verify.cpp
